--- a/index.html
+++ b/index.html
@@ -42,25 +42,14 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Card ENDS -->
                 </div>
             </div>
         </main>
     </body>
 </html>
 
-<!-- <style>
-        .attribution {
-          font-size: 11px;
-          text-align: center;
-        }
-        .attribution a {
-          color: hsl(228, 45%, 44%);
-        }
-      </style> -->
-
 <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by <a href="#">NickOD</a>.
         </div> -->
