--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                     </div>
                     <div class="card-content">
                         <div class="heading">
-                            <h1>Get <span>insights</span> that help your business grow.</h1>
+                            <h1>
+                                Get
+                                <span>insights</span>
+                                that help your business grow.
+                            </h1>
                         </div>
                         <div class="text">
                             <p>
-                                Discover the benefits of data analytics and make better decisions
-                                regarding revenue, customer experience, and overall efficiency.
+                                Discover the benefits of data analytics and make better decisions regarding revenue,
+                                customer experience, and overall efficiency.
                             </p>
                         </div>
                         <div class="stats">
@@ -43,13 +47,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="attribution">
+                    Challenge by
+                    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+                    . Coded by
+                    <a href="https://www.nickod.xyz/">NickOD</a>
+                    .
+                </div>
             </div>
         </main>
     </body>
 </html>
-
-<!-- <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-          >. Coded by <a href="#">NickOD</a>.
-        </div> -->
